<<<<<<< HEAD
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
   <PreferenceCategory 
       android:title="@string/wizard_title"
       android:key="settings_key">
       <Preference 
           android:key="permissive_key"
           android:summary="@string/permissive_mode_summary"
           android:title="@string/permissive_mode"/>
       <Preference 
           android:key="secure_key"
           android:summary="@string/secure_mode_summary"
           android:title="@string/secure_mode"/>
       <Preference 
           android:key="paranoid_key"
           android:summary="@string/paranoid_mode_summary"
           android:title="@string/paranoid_mode"/>       
   </PreferenceCategory>
</PreferenceScreen>
=======
<!--
  Copyright (c) 2014 CodingBad.
   All rights reserved.  This file is part of ASA.
   
   ASA is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.
   
   ASA is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
     
   You should have received a copy of the GNU General Public License
   along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
      
   Contributors:
      Ayelén Chavez - ashy.on.line@gmail.com
      Joaquín Rinaudo - jmrinaudo@gmail.com
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
   <PreferenceCategory 
       android:title="@string/wizard_title"
       android:key="settings_key">
       <Preference 
           android:key="permissive_key"
           android:summary="@string/permissive_mode_summary"
           android:title="@string/permissive_mode"/>
       <Preference 
           android:key="secure_key"
           android:summary="@string/secure_mode_summary"
           android:title="@string/secure_mode"/>
       <Preference 
           android:key="paranoid_key"
           android:summary="@string/paranoid_mode_summary"
           android:title="@string/paranoid_mode"/>       
   </PreferenceCategory>
</PreferenceScreen>
>>>>>>> 46da12c22a5800376d8a52d1bb5ba4e85192a2b6
