<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wifi_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/edit_ssid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_ssid"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edit_ssid"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/edit_bssid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_bssid"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edit_bssid"
			android:maxLength="12"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/edit_mac_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_mac"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edit_mac"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/edit_ip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_ip"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edit_ip_1"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
			android:maxLength="3"
            android:inputType="numberDecimal" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edit_ip_2"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
			android:maxLength="3"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edit_ip_3"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
			android:maxLength="3"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edit_ip_4"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
			android:maxLength="3"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <TextView
        android:id="@+id/editScannedTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_scanned_networks_title" />

    <RadioGroup
        android:id="@+id/radioGroupEditScanNetworks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/edit_real_scanned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_real_scanned" />

        <RadioButton
            android:id="@+id/edit_fake_scanned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_fake_scanned" />
    </RadioGroup>

    <TextView
        android:id="@+id/edit_configured_networks_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_configured_networks_title" />

    <ListView
        android:id="@+id/edit_configured_network_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.67" />

    <Button
        android:id="@+id/edit_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/apply" />
    
</LinearLayout>