<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2014 CodingBad.
  All rights reserved.  This file is part of ASA.
  
  ASA is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  ASA is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with ASA.  If not, see <http://www.gnu.org/licenses/>.
  
  Contributors:
  Ayelén Chavez - ashy.on.line@gmail.com
  Joaquín Rinaudo - jmrinaudo@gmail.com
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wifi_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/customCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customCheckbox" />

                <Button
                    android:id="@+id/customButton"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:text="@string/editCustom" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/ssidTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ssid" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroupSsid"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <RadioButton
                    android:id="@+id/fakeSsid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fake" />

                <RadioButton
                    android:id="@+id/realSsid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/real" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/bssidTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bssid" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroupBssid"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <RadioButton
                    android:id="@+id/fakeBssid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fake" />

                <RadioButton
                    android:id="@+id/realBssid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/real" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/ipAddressTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ipAddress" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroupIpAddress"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <RadioButton
                    android:id="@+id/fakeIpAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fake" />

                <RadioButton
                    android:id="@+id/realIpAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/real" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/macAddressTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/macAddress" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroupMacAddress"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <RadioButton
                    android:id="@+id/fakeMacAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fake" />

                <RadioButton
                    android:id="@+id/realMacAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/real" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/configuredNetworksTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/configuredNetworksHeader" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroupConfiguredNetworks"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <RadioButton
                    android:id="@+id/fakeConfiguredNetworks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fake" />

                <RadioButton
                    android:id="@+id/realConfiguredNetworks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/real" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/scanResultsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scanResultsHeader" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroupScanResults"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <RadioButton
                    android:id="@+id/fakeScanResults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fake" />

                <RadioButton
                    android:id="@+id/realScanResults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/real" />
            </RadioGroup>
        </LinearLayout>

    </ScrollView>

    <include layout="@layout/apply_cancel_layout" />

</LinearLayout>
